--- a/footer/package.json
+++ b/footer/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "footer",
+  "name": "@mfe/footer",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "build:single-spa:footer": "ng build footer --configuration production",
+    "serve:single-spa:footer": "ng s --project footer --disable-host-check --port 8501 --live-reload false"
   },
   "private": true,
   "dependencies": {
@@ -19,10 +21,13 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "rxjs": "~7.5.0",
+    "single-spa": ">=4.0.0",
+    "single-spa-angular": "^6.3.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "13.1.0",
     "@angular-devkit/build-angular": "~13.3.2",
     "@angular/cli": "~13.3.2",
     "@angular/compiler-cli": "~13.3.0",
@@ -34,6 +39,7 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "style-loader": "^3.3.1",
     "typescript": "~4.6.2"
   }
 }
